--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 Assalamu'alaikum warahmatullahi wabarakatuh.
+<audio controls autoplay>
+<source src="https://mariongrandvincent.github.io/HTML-Personal-website/img-codePen/kygo-stole-the-show.mp3" type="audio/mp3"/>
+</audio>
