--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 Assalamu'alaikum warahmatullahi wabarakatuh.
+<p>
 <audio controls autoplay>
 <source src="https://mariongrandvincent.github.io/HTML-Personal-website/img-codePen/kygo-stole-the-show.mp3" type="audio/mp3"/>
+</audio>
+</p>
+
+<audio controls autoplay>
+<source src="https://anilistriyana.github.io/wafa/buku1/Al-Fatihah.mp3" type="audio/mp3"/>
 </audio>
