--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ Assalamu'alaikum warahmatullahi wabarakatuh.
 </p>
 
 <audio controls autoplay>
-<source src="https://anilistriyana.github.io/wafa/buku1/Al-Fatihah.mp3" type="audio/mp3"/>
+<source src="https://github.com/anilistriyana/wafa/buku1/Al-Fatihah.mp3" type="audio/mp3"/>
 </audio>
