--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-Assalamu'alaikum warahmatullahi wabarakatuh.
-<p>
-<audio controls autoplay>
-<source src="https://mariongrandvincent.github.io/HTML-Personal-website/img-codePen/kygo-stole-the-show.mp3" type="audio/mp3"/>
-</audio>
-</p>
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Wafa SDIT Bina Insan Situbondo</title>
+  <meta charset="UTF-8">
+</head>
+<body>
+  <h1>Belajar Wafa</h1>
+  <p>Assalamu'alaikum warahmatullahi wabarakatuh.</p>
+  <br />
+<p> 1. Al Fatihah 
 <audio controls autoplay>
 <source src="https://github.com/anilistriyana/wafa/buku1/Al-Fatihah.mp3" type="audio/mp3"/>
 </audio>
+  </p>
+  </body>
+</html>
