--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <h1>Belajar Wafa</h1>
   <p>Assalamu'alaikum warahmatullahi wabarakatuh.</p>
   <br />
-<p> 1. Al Fatihah 
+  1. Al Fatihah 
 <audio controls autoplay>
 <source src="https://github.com/anilistriyana/wafa/buku1/Al-Fatihah.mp3" type="audio/mp3"/>
 </audio>
-  </p>
   </body>
 </html>
