--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-1. Al Fatihah 
-<audio controls autoplay>
-<source src="https://github.com/anilistriyana/wafa/buku1/Al-Fatihah.mp3" type="audio/mp3"/>
-</audio>
+<DOCTYPE! html>
+  <html>
+    <head>
+      <title>
+        wafabinainsanstb
+      </title>
+      </head>
+    <body>
+    </body>
+        
+  </html>
 
